--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript_postgres",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index2.js",
   "scripts": {
     "start": "nodemon index2.js"
   },
